@@ -2,6 +2,7 @@
 
 import numpy as np
 import matplotlib.pyplot as plt
+import matplotlib.gridspec as gridspec
 import sys
 import glob
 
@@ -15,15 +16,30 @@ def main():
     else:
         flist = glob.glob('GA-gen-info_pid*.out')
     for runfile in flist:
-        plot_runfile(runfile)
+        fig, axtxt, axs = prepare_plots(runfile)
+        plot_runfile(runfile, fig, axs)
+        t = "This is a really long string that I'd rather have wrapped so that it"\
+            " doesn't go outside of the figure, but if it's long enough it will go"\
+            " off the top or bottom!"
+        axtxt.text(0, 0, t, ha='left', rotation=0, wrap=True)
     plt.show()
 
-def plot_runfile(fname):
-    print(f'# plotting GA run from file {fname}')
-    gens, fittest, max_fit, avg_fit, elite_avg_fit, entropy = load_file(fname)
-    fig, axs = plt.subplots(3, 1)
+def prepare_plots(fname):
+    # fig, axs = plt.subplots(3, 2)
+    fig = plt.figure(constrained_layout = True)
+    gs = gridspec.GridSpec(3, 2)
+    axtxt = fig.add_subplot(gs[:, -1])
+    axs = [fig.add_subplot(gs[i, 0]) for i in range(3)]
+    print(axtxt)
+    print(axs)
     suptitle = fig.suptitle(f'GA output file {fname}', fontsize='x-large')
     suptitle.set_y(0.98)
+    return fig, axtxt, axs
+    
+
+def plot_runfile(fname, fig, axs):
+    print(f'# plotting GA run from file {fname}')
+    gens, fittest, max_fit, avg_fit, elite_avg_fit, entropy = load_file(fname)
     axs[0].plot(gens, max_fit, gens, avg_fit, gens, elite_avg_fit)
     axs[0].set_xlim(0, gens.size - 1)
     axs[0].set_xlabel('generation')
@@ -36,6 +52,7 @@ def plot_runfile(fname):
     axs[2].plot(gens, fittest)
     axs[2].set_xlim(0, gens.size - 1)
     axs[2].set_ylabel('position')
+
 
     fig.subplots_adjust(top=0.65)
     fig.tight_layout()
